--- a/index.html
+++ b/index.html
@@ -7,39 +7,20 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <style>
-    .img-fixed-size {
-      width: 100%;
-      height: auto;
-    }
-    .fixed-size-container {
-      max-width: 100%;
-      height: auto;
-    }
-  </style>
 </head>
 
 <body>
   <div class="container-fluid p-0">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-
-
-      <!-- Capçalera -->
-      <!--Instagram-->
-
-
       <div class="row w-100">
-        <div class="col-sm">
+        <div class="col-9">
           <p class="m-3"><i class="fab fa-instagram"></i> Instagram</p>
         </div>
-
-        <div class="col-sm d-flex justify-content-end">
-
-          <!--Create a new post-->
-          <button class="btn btn-success me-2 max-width-100" data-bs-toggle="modal" data-bs-target="#exampleModal">Create new post</button>
-
-          <!--Dropdown-->
-          <div class="btn-group">
+        <div class="col-2 d-flex justify-content-end">
+          <button class="btn btn-success me-2 max-width-100 " data-bs-toggle="modal" data-bs-target="#exampleModal">Create new post</button>
+        </div>
+        <div class="col-1 d-flex justify-content-end">
+          <div class="col-sm btn-group">
             <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
               <i class="fas fa-cog"></i>
             </button>
@@ -51,12 +32,9 @@
             </ul>          
           </div>
         </div>
-
       </div>
   </nav>
 </div>
-
-<!--Botons de canvi-->
 <nav>
 <div class="d-flex justify-content-center">
   <div class="nav nav-tabs" id="nav-tab" role="tablist">
@@ -67,34 +45,26 @@
 </nav>
 <div class="tab-content" id="nav-tabContent">
   <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab" tabindex="0">
-    <!--Feed grid-->
     <div class="container-fluid">
-
       <div class="row  w-100 d-flex">
         <div class="col-4 d-flex justify-content-center fixed-size-container"><img src="Imatges/Foto1.png" class="img-fluid img-fixed-size"></div>
         <div class="col-4 d-flex justify-content-center fixed-size-container"><img src="Imatges/Foto2.png" class="img-fluid img-fixed-size"></div>
         <div class="col-4 d-flex justify-content-center fixed-size-container"><img src="Imatges/Foto3.png" class="img-fluid img-fixed-size"></div>
       </div>
-  
       <div class="row mt-3 w-100 d-flex">
         <div class="col-4 d-flex justify-content-center fixed-size-container"><img src="Imatges/Foto4.png" class="img-fluid img-fixed-size"></div>
         <div class="col-4 d-flex justify-content-center fixed-size-container"><img src="Imatges/Foto5.png" class="img-fluid img-fixed-size"></div>
         <div class="col-4 d-flex justify-content-center fixed-size-container"><img src="Imatges/Foto6.png" class="img-fluid img-fixed-size"></div>
       </div>
-  
       <div class="row mt-3 w-100 d-flex">
         <div class="col-4 d-flex justify-content-center fixed-size-container"><img src="Imatges/Foto7.png" class="img-fluid img-fixed-size"></div>
         <div class="col-4 d-flex justify-content-center fixed-size-container"><img src="Imatges/Foto8.png" class="img-fluid img-fixed-size"></div>
         <div class="col-4 d-flex justify-content-center fixed-size-container"><img src="Imatges/Foto9.png" class="img-fluid img-fixed-size"></div>
       </div>
     </div>
-
   </div>
   <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab" tabindex="0">
-
-    <!--Feed llista-->
     <div class="container-fluid d-flex flex-column align-items-center">
-  
       <div class="card mb-3" style="width: 25rem;">
         <div class="card-head d-flex justify-content-between">
             <h6 class="card-text m-2">My crazy Dog Spark</h6>
@@ -106,7 +76,6 @@
           <p class="card-text mt-0"> <small>This is my dog Spark.</small></p>
         </div>
       </div>
-
       <div class="card mb-3" style="width: 25rem;">
         <div class="card-head d-flex justify-content-between">
             <h6 class="card-text m-2">New employees</h6>
@@ -118,7 +87,6 @@
           <p class="card-text mt-0"> <small></small>New employees</p>
         </div>
       </div>
-
       <div class="card mb-3" style="width: 25rem;">
         <div class="card-head d-flex justify-content-between">
             <h6 class="card-text m-2">The greatness of Croatia</h6>
@@ -130,7 +98,6 @@
           <p class="card-text mt-0"> <small>This is Croatia.</small></p>
         </div>
       </div>
-
       <div class="card mb-3" style="width: 25rem;">
         <div class="card-head d-flex justify-content-between">
             <h6 class="card-text m-2">Gemma</h6>
@@ -142,7 +109,6 @@
           <p class="card-text mt-0"> <small>This is Gemma</small></p>
         </div>
       </div>
-
       <div class="card mb-3" style="width: 25rem;">
         <div class="card-head d-flex justify-content-between">
             <h6 class="card-text m-2">Eiffel Tower</h6>
@@ -154,7 +120,6 @@
           <p class="card-text mt-0"> <small>In Paris.</small></p>
         </div>
       </div>
-
       <div class="card mb-3" style="width: 25rem;">
         <div class="card-head d-flex justify-content-between">
             <h6 class="card-text m-2">Amazing GOAL by Cristiano!</h6>
@@ -166,7 +131,6 @@
           <p class="card-text mt-0"> <small>Cristiano Ronaldo.</small></p>
         </div>
       </div>
-
       <div class="card mb-3" style="width: 25rem;">
         <div class="card-head d-flex justify-content-between">
             <h6 class="card-text m-2">Family</h6>
@@ -178,7 +142,6 @@
           <p class="card-text mt-0"> <small>My Family</small></p>
         </div>
       </div>
-
       <div class="card mb-3" style="width: 25rem;">
         <div class="card-head d-flex justify-content-between">
             <h6 class="card-text m-2">Code</h6>
@@ -190,7 +153,6 @@
           <p class="card-text mt-0"> <small>This is my work.</small></p>
         </div>
       </div>
-
       <div class="card mb-3" style="width: 25rem;">
         <div class="card-head d-flex justify-content-between">
             <h6 class="card-text m-2">Class</h6>
@@ -205,7 +167,7 @@
   </div>
 </div>
 
-<!--Modal-->
+
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -235,6 +197,6 @@
 </div>
 </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
